{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 67,
  "lineage": "ef4539e2-2149-00c4-52ea-b6f51f7ca48c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b828a06b4df704e",
            "domain": "vpc",
            "id": "eipalloc-01b828a06b4df704e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-119-154-43.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.154.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-eip-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-eip-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077f9c625f3067830",
            "domain": "vpc",
            "id": "eipalloc-077f9c625f3067830",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-116-190-144.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.190.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-eip-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-eip-us-east-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041cf776beca182d1",
            "association_id": "eipassoc-056128eb8c5edee31",
            "domain": "vpc",
            "id": "eipalloc-041cf776beca182d1",
            "network_border_group": "us-east-2",
            "network_interface": "eni-01bd8352c67155eae",
            "private_dns": "ip-10-10-10-191.us-east-2.compute.internal",
            "private_ip": "10.10.10.191",
            "public_dns": "ec2-3-132-176-137.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.176.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-eip-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-eip-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048a90c4d9a46a632",
            "association_id": "eipassoc-052026a0ddfbc8ed4",
            "domain": "vpc",
            "id": "eipalloc-048a90c4d9a46a632",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c1c812756ef69a15",
            "private_dns": "ip-10-10-11-152.us-east-2.compute.internal",
            "private_ip": "10.10.11.152",
            "public_dns": "ec2-3-141-146-68.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.146.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-eip-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-eip-us-east-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:internet-gateway/igw-060e8b92502f723ed",
            "id": "igw-060e8b92502f723ed",
            "owner_id": "596888301288",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:596888301288:loadbalancer/app/demo-alb/b338f6bc522ec96c",
            "arn_suffix": "app/demo-alb/b338f6bc522ec96c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-alb-732117074.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:596888301288:loadbalancer/app/demo-alb/b338f6bc522ec96c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d175d8f88e2913a2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06023d7f7f3ce60c1"
              },
              {
                "subnet_id": "subnet-0dfb8476da270f499"
              }
            ],
            "subnets": [
              "subnet-06023d7f7f3ce60c1",
              "subnet-0dfb8476da270f499"
            ],
            "vpc_id": "vpc-0968f9a7b68045a0a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.http",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:596888301288:listener/app/demo-alb/b338f6bc522ec96c/8c56328344e75725",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:596888301288:targetgroup/app-20240827140017777900000002/1df89390326f1b72",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:596888301288:listener/app/demo-alb/b338f6bc522ec96c/8c56328344e75725",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:596888301288:loadbalancer/app/demo-alb/b338f6bc522ec96c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.http",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:596888301288:targetgroup/app-20240827140017777900000002/1df89390326f1b72",
            "arn_suffix": "targetgroup/app-20240827140017777900000002/1df89390326f1b72",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:596888301288:targetgroup/app-20240827140017777900000002/1df89390326f1b72",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-20240827140017777900000002",
            "name_prefix": "app-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041cf776beca182d1",
            "association_id": "eipassoc-056128eb8c5edee31",
            "connectivity_type": "public",
            "id": "nat-0b4ee62197efab697",
            "network_interface_id": "eni-01bd8352c67155eae",
            "private_ip": "10.10.10.191",
            "public_ip": "3.132.176.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06023d7f7f3ce60c1",
            "tags": {
              "Name": "demo-nat-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-nat-us-east-2a"
            }
          },
          "dependencies": [
            "aws_eip.natEIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048a90c4d9a46a632",
            "association_id": "eipassoc-052026a0ddfbc8ed4",
            "connectivity_type": "public",
            "id": "nat-0df3308650c6184ca",
            "network_interface_id": "eni-0c1c812756ef69a15",
            "private_ip": "10.10.11.152",
            "public_ip": "3.141.146.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dfb8476da270f499",
            "tags": {
              "Name": "demo-nat-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-nat-us-east-2b"
            }
          },
          "dependencies": [
            "aws_eip.natEIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:route-table/rtb-03c0f986ffb9bb3bd",
            "id": "rtb-03c0f986ffb9bb3bd",
            "owner_id": "596888301288",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4ee62197efab697",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-rt-private"
            },
            "tags_all": {
              "Name": "demo-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natEIP",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:route-table/rtb-07cd6948210413357",
            "id": "rtb-07cd6948210413357",
            "owner_id": "596888301288",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060e8b92502f723ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-rt-public"
            },
            "tags_all": {
              "Name": "demo-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d396ca01c770a4aa",
            "route_table_id": "rtb-03c0f986ffb9bb3bd",
            "subnet_id": "subnet-02756876b9ad03fbd"
          },
          "dependencies": [
            "aws_eip.natEIP",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094b6807f83d08f57",
            "route_table_id": "rtb-03c0f986ffb9bb3bd",
            "subnet_id": "subnet-04936df0ec9cf5471"
          },
          "dependencies": [
            "aws_eip.natEIP",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0679ae48dd8db279c",
            "route_table_id": "rtb-07cd6948210413357",
            "subnet_id": "subnet-06023d7f7f3ce60c1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c209a9731b65824",
            "route_table_id": "rtb-07cd6948210413357",
            "subnet_id": "subnet-0dfb8476da270f499"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:security-group/sg-02ba28642b36c79c7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-02ba28642b36c79c7",
            "ingress": [],
            "name": "demo-ecs-node-sg-20240827111553169300000001",
            "name_prefix": "demo-ecs-node-sg-",
            "owner_id": "596888301288",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:security-group/sg-0c87f4c5da2e70d6c",
            "description": "Allow all traffic within the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c87f4c5da2e70d6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-task-sg-20240827135814029300000001",
            "name_prefix": "ecs-task-sg-",
            "owner_id": "596888301288",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:security-group/sg-0d175d8f88e2913a2",
            "description": "Allow all HTTP/HTTPS traffic from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d175d8f88e2913a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-sg-20240827140017776400000001",
            "name_prefix": "http-sg-",
            "owner_id": "596888301288",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:subnet/subnet-02756876b9ad03fbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02756876b9ad03fbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596888301288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-private-us-east-2a"
            },
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:subnet/subnet-04936df0ec9cf5471",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04936df0ec9cf5471",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596888301288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-private-us-east-2b"
            },
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:subnet/subnet-06023d7f7f3ce60c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06023d7f7f3ce60c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596888301288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-public-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-public-us-east-2a"
            },
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:subnet/subnet-0dfb8476da270f499",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfb8476da270f499",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596888301288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-public-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-public-us-east-2b"
            },
            "vpc_id": "vpc-0968f9a7b68045a0a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:596888301288:vpc/vpc-0968f9a7b68045a0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08a7bd3b693b5706c",
            "default_route_table_id": "rtb-052d15bd9b154b1a5",
            "default_security_group_id": "sg-04833fb1bd1df9547",
            "dhcp_options_id": "dopt-3a58d851",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0968f9a7b68045a0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052d15bd9b154b1a5",
            "owner_id": "596888301288",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}